--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
     <h1> Janet's haiku</h1>
     <p>Colorado moths</p>
+        <p> Flocking to my window screen</p>
     </body>
 
 </html>
