--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <body>
     <h1> Janet's haiku</h1>
     <p>Colorado moths</p>
-<<<<<<< HEAD
-=======
-        <p> Flocking to my window screen</p>
->>>>>>> d22bbaba5d8eb63f5a0d3d6bfe725d13b698c0e6
+    <p> Flocking to my window screen</p>
+    <p>Yuck Go away moth </p>
     </body>
 
 </html>
